# my-no-sql-server

./: .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  build.rs  gulpfile.js  package-lock.json  ttt.json
.github/workflows/: release.yml  test.yml
JavaScript/: HtmlGraph.js.map  HtmlMain.js  HtmlMain.js.map  HtmlStaticElement.js.map  HtmlStatusBar.js  HtmlStatusBar.js.map  HtmlSubscribersGenerator.js  HtmlSubscribersGenerator.js.map  Utils.js  Utils.js.map  main.js  main.js.map
TypeScript/: HtmlMain.ts  HtmlStatusBar.ts  HtmlSubscribersGenerator.ts  Utils.ts  contracts.d.ts  main.ts
examples/: azure-containers.xml
my-http-macros/: Cargo.toml
my-http-macros/src/: consts.rs  lib.rs  types.rs
my-no-sql-server/: Cargo.toml
my-no-sql-server/src/: consts.rs  main.rs  persist_compression.rs  settings_reader.rs
my-no-sql-server/wwwroot/: index.html
my-no-sql-ui/: Cargo.toml  Dioxus.toml  Dockerfile  build.rs  build.sh
my-no-sql-ui/css/: 01-tokens.css  02-app.css  02-shell.css  03-atoms.css  04-overview.css  05-data.css  06-connections.css  07-mini-chart.css
my-no-sql-ui/public/assets/: app.css
my-no-sql-ui/src/: main.rs  settings.rs  storage.rs  utils.rs
my-no-sql-ui/src/api/: mod.rs
my-no-sql-ui/src/components/: graph.rs  mod.rs  status_bar.rs
my-no-sql-ui/src/components/atoms/: badge.rs  icon.rs  mini_chart.rs  mod.rs  sparkline.rs  stat.rs  state_pill.rs
my-no-sql-ui/src/components/data/: cell.rs  mod.rs  pagination.rs  partitions_pane.rs  row_drawer.rs  rows_table.rs  table_header.rs  table_toolbar.rs  tables_pane.rs
my-no-sql-ui/src/components/overview/: health_banner.rs  mod.rs  reader_health_grid.rs  readers_table.rs  stats_row.rs  table_coverage.rs  writers_table.rs
my-no-sql-ui/src/components/shell/: mod.rs  sidebar.rs  topbar.rs
my-no-sql-ui/src/models/: connections_api_model.rs  data_models.rs  mod.rs  reader_api_model.rs  snapshot_file_api_model.rs  snapshot_table_api_model.rs  status_api_model.rs  status_bar_api_model.rs  table_api_model.rs  writer_api_model.rs
my-no-sql-ui/src/pages/: connections.rs  data.rs  home.rs  mod.rs  not_found.rs  settings.rs  snapshots.rs
my-swagger/: Cargo.toml
my-swagger/src/: consts.rs  lib.rs
proto/: MyNoSqlServer.proto
src/: consts.rs  main.rs  parser.rs  settings_reader.rs
src/app/: app_ctx.rs  app_services.rs  event_dispatcher.rs  events_sync.rs  global_states.rs  http_writers.rs  logs.rs  metrics.rs  mod.rs  persist_history_duration.rs  request_metrics.rs  services.rs
src/background/: backup_timer.rs  data_gc.rs  db_rows_expirator.rs  dead_data_readers_gc.rs  flush_to_blobs.rs  gc_db_rows.rs  gc_http_sessions.rs  gc_multipart.rs  gc_partitions.rs  metrics_updater.rs  mod.rs  persist.rs  sync.rs  tcp_connection_send_event_loop.rs  update_statistics.rs
src/blob_operations/: blob_errors_handler.rs  create_table.rs  delete_partition.rs  delete_table.rs  mod.rs  save_partition.rs  save_table_attributes.rs
src/data_readers/: connection.rs  data_reader.rs  data_reader_contract.rs  data_reader_updatable_data.rs  data_readers.rs  data_readers_broadcast.rs  data_readers_data.rs  data_readers_list.rs  mod.rs  socket_read_buffer.rs  tcp_server.rs  type_parsers.rs
src/date_time/: atomic_date_time.rs  date_time.rs  mod.rs  utils.rs
src/db/: db_instance.rs  db_operation_fail.rs  db_operation_result.rs  db_partition.rs  db_partition_snapshot.rs  db_row.rs  db_table.rs  db_table_data.rs  db_table_snapshot.rs  db_table_wrapper.rs  error.rs  mod.rs  read_as_json.rs  types.rs  update_expiration_time_model.rs
src/db_entity/: consts.rs  db_entity.rs  db_entity_parse_fail.rs  json_parser.rs  mod.rs
src/db_json_entity/: array_parser.rs  consts.rs  date_time_injector.rs  db_json_entity.rs  error.rs  json_time_stamp.rs  mod.rs  utils.rs
src/db_operations/: check_app_states.rs  error.rs  gc.rs  mod.rs  parse_json_entity.rs  read_as_json.rs  read_rows.rs  rows.rs  tables.rs  update_expiration_time.rs  validation.rs
src/db_sync/: mod.rs  sync_attributes.rs  sync_event.rs
src/db_transactional_operations/: active_transactions.rs  http.rs  mod.rs  transactional_operation.rs
src/db_transactions/: active_transactions.rs  mod.rs  operations.rs  transaction_attributes.rs  transaction_event.rs
src/grpc/: mod.rs  server.rs  writer_grpc.rs
src/http/: get_table.rs  http_ctx.rs  http_fail.rs  http_helpers.rs  http_ok.rs  http_server.rs  http_sessions.rs  mod.rs  params_readers.rs  query_string.rs  router.rs  start_up.rs  static_files.rs  swagger.rs  web_content_type.rs
src/http_server/: get_table.rs  http_sessions.rs  mod.rs  start_up.rs
src/json/: array_parser.rs  consts.rs  date_time.rs  db_entity.rs  json_array_builder.rs  json_first_line.rs  json_first_line_parser.rs  json_parse_error.rs  json_utils.rs  mod.rs  parser.rs  utils.rs
src/mcp/: get_list_of_tables_tool_call.rs
src/operations/: build_db_snapshot_as_zip.rs  data_initializer.rs  data_readers.rs  data_synchronizer.rs  errors.rs  get_metrics.rs  mod.rs  parse_db_json_entity.rs  persist.rs  sessions.rs  shutdown.rs  spawn_dedicated_persist_thread.rs  sync.rs  tables_to_initialize.rs  transaction_attributes.rs
src/persist/: data_to_persist.rs  mod.rs  partition_persist_data.rs  partition_persist_marker.rs  persist_markers.rs  persist_markers_by_table.rs  persist_result.rs
src/persist_grpc_service/: mod.rs  persist_grpc_service.rs
src/persist_io/: active_loader.rs  mod.rs  persist_io_operations.rs  table_file.rs
src/persist_markers/: persist_by_table_item.rs  persist_markers.rs  persist_markers_inner.rs  persist_metrics.rs  persist_partition_marker.rs  persist_row_marker.rs
src/persist_operations/: data_to_persist.rs  io_with_cache.rs  mod.rs  persist_partition.rs
src/persistence/: blob_content_cache.rs  blob_repo.rs  data_initializer.rs  data_synchronizer.rs  data_to_persist.rs  mod.rs  queue_by_table.rs  queue_to_persist.rs  tables_initializer.rs
src/rows_with_expiration/: mod.rs  row_with_expiration_bucket.rs  rows_with_expiration.rs  (+1 more)
test/: test-case.json  test_case_2.json
wwwroot/: app.css  index.html
(+859 files in other folders)
