[package]
name = "my_no_sql_server"
version = "0.0.22"
authors = ["amigin <amigin@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-http-server = { tag = "0.7.0", git = "https://github.com/MyJetTools/my-http-server.git", features = [
    "macros",
    "controllers",
    "static-files",
] }

my-no-sql-sdk = { tag = "0.3.1", git = "https://github.com/MyJetTools/my-no-sql-sdk.git", features = [
    "master-node",
    "tcp-contracts",
] }

my-no-sql-server-core = { tag = "0.3.2", git = "https://github.com/MyJetTools/my-no-sql-server-core.git", features = [
    "master-node",
] }

my-azure-storage-sdk = { tag = "0.5.0", git = "https://github.com/MyJetTools/my-azure-storage.git" }
flurl = { tag = "0.5.0", git = "https://github.com/MyJetTools/fl-url" }

my-logger = { tag = "1.1.0", git = "https://github.com/MyJetTools/my-logger.git" }

my-tcp-sockets = { tag = "0.1.9", git = "https://github.com/MyJetTools/my-tcp-sockets.git" }

hyper-tls = "*"
tonic = { version = "*", features = ["tls", "tls-roots", "prost"] }
anyhow = "*"
tokio = { version = "*", features = ["full"] }
prost = "*"
serde = { version = "*", features = ["derive"] }
tokio-util = "*"
futures = "*"
chrono = "*"
futures-util = { version = "*" }
futures-core = { version = "*" }
futures-channel = "*"
serde_json = "*"
serde_derive = "*"
quick-xml = "*"
lazy_static = "*"
hmac = "*"
sha2 = "*"
base64 = "*"
serde_yaml = "*"
uuid = { version = "*", features = ["serde", "v4"] }
prometheus = "*"
async-trait = "*"
tokio-stream = "*"
zip = "*"

tikv-jemalloc-ctl = { version = "*", features = ['use_std'] }
tikv-jemallocator = { version = "*", features = [
    "unprefixed_malloc_on_supported_platforms",
] }

[build-dependencies]
tonic-build = { version = "*", features = ["prost"] }
