[package]
name = "my-no-sql-ui"
version = "0.1.0"
edition = "2024"

[features]
default = ["web"]
web = ["dioxus/web"]

[dependencies]
dioxus = { version = "0.7", features = ["router"] }
dioxus-utils = { tag = "0.7.0", git = "https://github.com/MyJetTools/dioxus-utils.git", features = [
    "web",
] }

reqwest = { version = "*", features = ["json"] }
futures = { version = "*" }

serde_json = { version = "*" }
serde = { version = "*", features = ["derive"] }

web-sys = { version = "*", features = ["Storage", "Window"] }
js-sys = { version = "*" }

[build-dependencies]
ci-utils = { git = "https://github.com/MyJetTools/ci-utils.git", tag = "0.1.3" }

[profile.release]
strip = "debuginfo"
